5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1888_1617.log
== SUBMITION (2019-07-09 16:04:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
x = a*b

-- EXECUTION TIME:
1.01145
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1617/main.py", line 5, in <module>
    x = a*b
TypeError: ufunc 'multiply' did not contain a loop with signature matching types dtype('<U21') dtype('<U21') dtype('<U21')

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:04:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
x = a*b
print(x)
-- EXECUTION TIME:
0.956139
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1617/main.py", line 5, in <module>
    x = a*b
TypeError: ufunc 'multiply' did not contain a loop with signature matching types dtype('<U21') dtype('<U21') dtype('<U21')

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:04:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
x = a*b
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:05:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = input()
b = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:05:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = input()
b = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(input())
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA"
		x = 2
	elif a[i] == "FERRO"
		x = 4
	elif a[i] == "DWARVEN"
		x = 8
	elif a[i] == "ELVEN"
		x = 11
	elif a[i] == "DADRIC"
		x = 14
for i in range(size(b)):
	d += x*b[i]
print(d)
-- ERROR:
File "XXXX", line 6
    if a[i] == "CENOURA"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(input())
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA"
		x = 2
	elif a[i] == "FERRO"
		x = 4
	elif a[i] == "DWARVEN"
		x = 8
	elif a[i] == "ELVEN"
		x = 11
	elif a[i] == "DADRIC"
		x = 14
for i in range(size(b)):
	d += x*b[i]
print(d)
-- ERROR:
File "XXXX", line 6
    if a[i] == "CENOURA"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(input())
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA"
		x = 2
	elif a[i] == "FERRO"
		x = 4
	elif a[i] == "DWARVEN"
		x = 8
	elif a[i] == "ELVEN"
		x = 11
	elif a[i] == "DADRIC"
		x = 14
for i in range(size(b)):
	d += x*b[i]
print(d)
-- ERROR:
File "XXXX", line 6
    if a[i] == "CENOURA"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA"
		x = 2
	elif a[i] == "FERRO"
		x = 4
	elif a[i] == "DWARVEN"
		x = 8
	elif a[i] == "ELVEN"
		x = 11
	elif a[i] == "DADRIC"
		x = 14
for i in range(size(b)):
	d += x*b[i]
print(d)
-- ERROR:
File "XXXX", line 6
    if a[i] == "CENOURA"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA"
		x = 2
	elif a[i] == "FERRO"
		x = 4
	elif a[i] == "DWARVEN"
		x = 8
	elif a[i] == "ELVEN"
		x = 11
	elif a[i] == "DADRIC"
		x = 14
for i in range(size(b)):
	d += x*b[i]
print(d)
-- ERROR:
File "XXXX", line 6
    if a[i] == "CENOURA"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:30:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		x = 2
	elif a[i] == "FERRO"
		x = 4
	elif a[i] == "DWARVEN"
		x = 8
	elif a[i] == "ELVEN"
		x = 11
	elif a[i] == "DADRIC"
		x = 14
for i in range(size(b)):
	d += x*b[i]
print(d)
-- ERROR:
File "XXXX", line 8
    elif a[i] == "FERRO"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		x = 2
	elif a[i] == "FERRO":
		x = 4
	elif a[i] == "DWARVEN":
		x = 8
	elif a[i] == "ELVEN":
		x = 11
	elif a[i] == "DADRIC":
		x = 14
for i in range(size(b)):
	d += x*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		x = 2
	elif a[i] == "FERRO":
		x = 4
	elif a[i] == "DWARVEN":
		x = 8
	elif a[i] == "ELVEN":
		x = 11
	elif a[i] == "DADRIC":
		x = 14
for i in range(size(b)):
	d += x*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(input())
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		x = 2
	elif a[i] == "FERRO":
		x = 4
	elif a[i] == "DWARVEN":
		x = 8
	elif a[i] == "ELVEN":
		x = 11
	elif a[i] == "DADRIC":
		x = 14
for i in range(size(b)):
	d += x*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:33:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		a[i] += 2
	elif a[i] == "FERRO":
		a[i] += 4
	elif a[i] == "DWARVEN":
		a[i] += 8
	elif a[i] == "ELVEN":
		a[i] += 11
	elif a[i] == "DADRIC":
		a[i] += 14
for i in range(size(b)):
	d += a[i]*b[i]
print(d)
-- EXECUTION TIME:
0.866086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1617/main.py", line 13, in <module>
    a[i] += 11
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:33:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		a[i] += 2
	elif a[i] == "FERRO":
		a[i] += 4
	elif a[i] == "DWARVEN":
		a[i] += 8
	elif a[i] == "ELVEN":
		a[i] += 11
	elif a[i] == "DADRIC":
		a[i] += 14
for i in range(size(b)):
	d += a[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:34:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		a[i] += 2
	elif a[i] == "FERRO":
		a[i] += 4
	elif a[i] == "DWARVEN":
		a[i] += 8
	elif a[i] == "ELVEN":
		a[i] += 11
	elif a[i] == "DADRIC":
		a[i] += 14
for i in range(size(b)):
	d += a[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:34:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(input())
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		a[i] += 2
	elif a[i] == "FERRO":
		a[i] += 4
	elif a[i] == "DWARVEN":
		a[i] += 8
	elif a[i] == "ELVEN":
		a[i] += 11
	elif a[i] == "DADRIC":
		a[i] += 14
for i in range(size(b)):
	d += a[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:35:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		a[i] = 2
	elif a[i] == "FERRO":
		a[i] = 4
	elif a[i] == "DWARVEN":
		a[i] = 8
	elif a[i] == "ELVEN":
		a[i] = 11
	elif a[i] == "DADRIC":
		a[i] = 14
for i in range(size(b)):
	d += a[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
for i in range(size(a)):
	if a[i] == "CENOURA":
		a[i] = 2
	elif a[i] == "FERRO":
		a[i] = 4
	elif a[i] == "DWARVEN":
		a[i] = 8
	elif a[i] == "ELVEN":
		a[i] = 11
	elif a[i] == "DADRIC":
		a[i] = 14
for i in range(size(b)):
	d += a[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] = 2
	elif a[i] == "FERRO":
		y[i] = 4
	elif a[i] == "DWARVEN":
		y[i] = 8
	elif a[i] == "ELVEN":
		y[i] = 11
	elif a[i] == "DADRIC":
		y[i] = 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(input())
b = array(eval(input()))
y = zeros(5, dtype=int)
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] = 2
	elif a[i] == "FERRO":
		y[i] = 4
	elif a[i] == "DWARVEN":
		y[i] = 8
	elif a[i] == "ELVEN":
		y[i] = 11
	elif a[i] == "DADRIC":
		y[i] = 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] = 2
	elif a[i] == "FERRO":
		y[i] = 4
	elif a[i] == "DWARVEN":
		y[i] = 8
	elif a[i] == "ELVEN":
		y[i] = 11
	elif a[i] == "DADRIC":
		y[i] = 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] = 2
	elif a[i] == "FERRO":
		y[i] = 4
	elif a[i] == "DWARVEN":
		y[i] = 8
	elif a[i] == "ELVEN":
		y[i] = 11
	elif a[i] == "DADRIC":
		y[i] = 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:41:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- EXECUTION TIME:
0.840399
-- TEST CASE 1:
---- input:
["DAEDRIC","ELVEN","CENOURA","FERRO"]
[2,1,6,2]
---- correct output:
59
---- user output:
31
-- TEST CASE 2:
---- input:
["DAEDRIC","FERRO","CENOURA","DWARVEN"]
[2,1,6,6]
---- correct output:
92
---- user output:
64
-- TEST CASE 3:
---- input:
["DAEDRIC","FERRO","DWARVEN","ELVEN"]
[4,1,6,3]
---- correct output:
141
---- user output:
85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:42:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- EXECUTION TIME:
1.0047
-- TEST CASE 1:
---- input:
["DAEDRIC","ELVEN","CENOURA","FERRO"]
[2,1,6,2]
---- correct output:
59
---- user output:
31
-- TEST CASE 2:
---- input:
["DAEDRIC","FERRO","CENOURA","DWARVEN"]
[2,1,6,6]
---- correct output:
92
---- user output:
64
-- TEST CASE 3:
---- input:
["DAEDRIC","FERRO","DWARVEN","ELVEN"]
[4,1,6,3]
---- correct output:
141
---- user output:
85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[0] += 2
	elif a[i] == "FERRO":
		y[1] += 4
	elif a[i] == "DWARVEN":
		y[2] += 8
	elif a[i] == "ELVEN":
		y[3] += 11
	elif a[i] == "DADRIC":
		y[4] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:43:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[0] += 2
	elif a[i] == "FERRO":
		y[1] += 4
	elif a[i] == "DWARVEN":
		y[2] += 8
	elif a[i] == "ELVEN":
		y[3] += 11
	elif a[i] == "DADRIC":
		y[4] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- EXECUTION TIME:
1.06761
-- TEST CASE 1:
---- input:
["DAEDRIC","ELVEN","CENOURA","FERRO"]
[2,1,6,2]
---- correct output:
59
---- user output:
30
-- TEST CASE 2:
---- input:
["DAEDRIC","FERRO","CENOURA","DWARVEN"]
[2,1,6,6]
---- correct output:
92
---- user output:
56
-- TEST CASE 3:
---- input:
["DAEDRIC","FERRO","DWARVEN","ELVEN"]
[4,1,6,3]
---- correct output:
141
---- user output:
85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[0] += 2
	elif a[i] == "FERRO":
		y[1] += 4
	elif a[i] == "DWARVEN":
		y[2] += 8
	elif a[i] == "ELVEN":
		y[3] += 11
	elif a[i] == "DADRIC":
		y[4] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DADRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:46:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = array(eval(input()))
y = zeros(5, dtype=int)
d = 0
for i in range(size(a)):
	if a[i] == "CENOURA":
		y[i] += 2
	elif a[i] == "FERRO":
		y[i] += 4
	elif a[i] == "DWARVEN":
		y[i] += 8
	elif a[i] == "ELVEN":
		y[i] += 11
	elif a[i] == "DAEDRIC":
		y[i] += 14
for i in range(size(b)):
	d += y[i]*b[i]
print(d)
-- EXECUTION TIME:
0.894178
-- TEST CASE 1:
---- input:
["DAEDRIC","ELVEN","CENOURA","FERRO"]
[2,1,6,2]
---- correct output:
59
---- user output:
59
-- TEST CASE 2:
---- input:
["DAEDRIC","FERRO","CENOURA","DWARVEN"]
[2,1,6,6]
---- correct output:
92
---- user output:
92
-- TEST CASE 3:
---- input:
["DAEDRIC","FERRO","DWARVEN","ELVEN"]
[4,1,6,3]
---- correct output:
141
---- user output:
141
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
